# codeupipe

./: .gitignore  404.html  BEST_PRACTICES.md  CONCEPTS.md  INDEX.md  README.md  ROADMAP.md  SKILL.md  agents.txt  architecture-diagram.txt  best-practices.txt  concepts.txt  curl.txt  deploy-guide.txt  getting-started.txt  index.html  index.txt  install.txt  mkdocs.yml  mobile-roadmap.txt  module-index.txt  platform.txt  privacy-policy.txt  pyproject.toml  ring10-secure-config-blueprint.txt  ring11-ai-frontend-blueprint.txt  ring12-ai-suite-blueprint.txt  roadmap.txt  setup.py  sitemap.xml
.github/instructions/: codeupipe-architecture.instructions.md  codeupipe-cli.instructions.md  codeupipe-cup-ref.instructions.md  codeupipe-filters.instructions.md  codeupipe-linter-dogfood.instructions.md  codeupipe-testing.instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
agents/: auth.txt  browser.txt  cli.txt  connect.txt  core.txt  deploy.txt  index.html  patterns.txt  testing.txt
agents/auth/: index.html
agents/browser/: index.html
agents/cli/: index.html
agents/connect/: index.html
agents/core/: index.html
agents/deploy/: index.html
agents/patterns/: index.html
agents/testing/: index.html
architecture-diagram/: index.html
archive/: README.txt  index.html  ring7-blueprint.txt  shipping-exploration.txt
archive/ring7-blueprint/: index.html
archive/ring8-connect-blueprint/: index.html
archive/ring9-marketplace-blueprint/: index.html
archive/shipping-exploration/: index.html
best-practices/: index.html
blueprints/: ring8.txt  ring9.txt
blueprints/ring7/: index.html
blueprints/ring8/: index.html
blueprints/ring9/: index.html
codeuchain/: __init__.py
codeuchain/core/: __init__.py  chain.py  hook.py  link.py  state.py
codeuchain/utils/: error_handling.py
codeupipe/: __init__.py  cli.py  doctor.py  graph.py  observe.py  runtime.py  testing.py  upgrade.py
codeupipe/ai/: __init__.py  _check.py  _compat.py  config.py
codeupipe/android/: __init__.py  adb_bridge.py  adb_result.py  android_close.py  android_eval.py  android_install.py  android_log.py  android_open.py  android_screenshot.py  android_shell.py  android_snapshot.py  android_tap.py  android_type.py  emulator_manager.py
codeupipe/auth/: __init__.py  _server.py  credential.py  hook.py  provider.py
codeupipe/browser/: __init__.py  bridge.py  browser_click.py  browser_close.py  browser_eval.py  browser_fill.py  browser_get.py  browser_open.py  browser_raw.py  browser_screenshot.py  browser_snapshot.py  browser_tabs.py  playwright_bridge.py
codeupipe/cli/: __init__.py
codeupipe/connect/: __init__.py  bridge.js  bridge_config.py  bridge_discovery.py  bridge_launcher.py  config.py  discovery.py  http.py  install-bridge.sh  local_bridge.py
codeupipe/core/: __init__.py  decrypt_filter.py  encrypt_filter.py  event.py  govern.py  payload.py  pipeline.py  secure.py  sign_filter.py  state.py  valve.py  verify_filter.py
codeupipe/deploy/: __init__.py  apprunner.py  azure_container_apps.py  cloudrun.py  contract.py  discovery.py  docker.py  fly.py  huggingface.py  init.py  koyeb.py  manifest.py  oracle.py  railway.py  render.py
concepts/: index.html
connectors/codeupipe-google-ai/: pyproject.toml
connectors/codeupipe-google-ai/codeupipe_google_ai/: __init__.py  embed.py  generate.py  generate_stream.py  vision.py
connectors/codeupipe-google-ai/tests/: test_google_ai.py
connectors/codeupipe-postgres/: pyproject.toml
connectors/codeupipe-postgres/codeupipe_postgres/: __init__.py  bulk_insert.py  execute.py  query.py  transaction.py
connectors/codeupipe-postgres/tests/: test_postgres.py
connectors/codeupipe-resend/: pyproject.toml
connectors/codeupipe-resend/codeupipe_resend/: __init__.py  email.py  template.py
connectors/codeupipe-resend/tests/: test_resend.py
connectors/codeupipe-stripe/: pyproject.toml
connectors/codeupipe-stripe/codeupipe_stripe/: __init__.py  checkout.py  customer.py  subscription.py  webhook.py
connectors/codeupipe-stripe/tests/: test_stripe.py
deploy-guide/: index.html
docs/: agents.md  architecture-diagram.md  best-practices.md  deploy-guide.md  getting-started.md  index.md  install.md  mobile-roadmap.md  module-index.md  platform.md  privacy-policy.md  ring10-secure-config-blueprint.md  ring11-ai-frontend-blueprint.md  ring12-ai-suite-blueprint.md  ring8-connect-blueprint.md  ring9-marketplace-blueprint.md  sideload-crx.md
docs/agents/: auth.md  (+7 more)
examples/: android_edge_setup.py  browser_demo.py  context_default_demo.py  insert_as_method_demo.py  simple_math.py  typed_example.py  typed_vs_untyped_comparison.py  typed_workflow_patterns.py  vault_demo.py
getting-started/: index.html
hooks/: build_platform.py  copy_raw.py  sync_docs.py
install/: index.html
marketplace/: index.json
mobile-roadmap/: index.html
module-index/: index.html
platform/: cup-bridge-android.crx  platform.css  store.js
privacy-policy/: index.html
ring10-secure-config-blueprint/: index.html
ring11-ai-frontend-blueprint/: index.html
ring12-ai-suite-blueprint/: index.html
roadmap/: index.html
scripts/: cdp_check.py  cdp_eval.py  cdp_reload.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_agent_docs_pipeline.py  test_agent_loop_template.py  test_ai_keys_cli.py  test_android.py  test_android_edge.py  test_assemble_doc_report.py  test_assemble_report.py  test_auth.py  test_bird_bone.py  test_bridge.py  test_browser_filters.py  test_build_platform.py  test_chain.py  test_check_bundle.py  test_check_index.py  test_check_naming.py  test_check_protocols.py  test_check_structure.py  test_check_symbols.py  test_check_tests.py  test_cli.py  test_cli_new_commands.py  test_cli_smoke.py  test_config_ring3.py  test_connect.py  test_coverage_pipeline.py  test_decrypt_filter.py  test_deploy.py  test_deploy_contracts.py  test_detect_drift.py  test_detect_orphans.py  test_distribute.py  test_doc_check_cli.py  test_doc_check_pipeline.py  test_doctor.py  test_dynamic_pipeline.py  test_encrypt_filter.py  test_error_handling.py  (+58 more)
(+382 files in other folders)
