[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeupipe"
version = "0.12.0"
description = "Python pipeline framework — composable Payload-Filter-Pipeline pattern"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Joshua Wink"}]
keywords = ["pipeline", "filter", "payload", "etl", "workflow", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
ai = [
    "github-copilot-sdk>=0.1.23",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
]
ai-discovery = [
    "codeupipe[ai]",
    "torch>=2.5.0",
    "transformers>=4.45",
]
ai-tui = [
    "codeupipe[ai]",
    "textual[syntax]>=1.0.0",
    "textual-autocomplete>=4.0.0",
]
ai-eval = [
    "codeupipe[ai]",
]
ai-full = [
    "codeupipe[ai,ai-discovery,ai-tui,ai-eval]",
]
ai-dev = [
    "codeupipe[ai]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/codeuchain/codeupipe"
Repository = "https://github.com/codeuchain/codeupipe"
Issues = "https://github.com/codeuchain/codeupipe/issues"

[project.scripts]
cup = "codeupipe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codeupipe*"]
exclude = ["prototypes*", "lab*", "examples*", "tests*", "connectors*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "core: Core functionality tests",
    "utils: Utility tests",
    "asyncio: Async tests",
    "live: Tests that hit real external services (network required)",
    "ai: AI suite tests (require codeupipe[ai] extras)",
    "ai_discovery: AI discovery tests (require torch + transformers)",
    "e2e: End-to-end tests",
]
asyncio_mode = "strict"