[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codeupipe-resend"
version = "0.1.0"
description = "Resend connector for codeupipe — transactional email and template rendering"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "codeupipe>=0.8.0",
    "resend>=2.0.0",
]

[project.entry-points."codeupipe.connectors"]
resend = "codeupipe_resend:register"
